--- a/We1_Hangouts/views/partials/header.ejs
+++ b/We1_Hangouts/views/partials/header.ejs
@@ -15,7 +15,12 @@
     <header>
         <nav>
             <div class="nav-container">
-                <h1 class="logo"><a href="/">We1 Hangout</a></h1>
+                <h1 class="logo">
+                    <a href="/" style="display: flex; align-items: center;">
+                        <img src="/images/we1.png" alt="We1" width="50" height="50"/>
+                        <span>Hangout</span>
+                    </a>
+                </h1>
                 <ul class="nav-links">
                 <div class="sound-controls">
                     <button id="sound-toggle" class="sound-btn">🔊</button>
