--- a/We1_Hangouts/views/game.ejs
+++ b/We1_Hangouts/views/game.ejs
@@ -66,7 +66,7 @@
                             <div class="vs">VS</div>
                             <div class="session-score">
                                 <span id="session-score">0 - 0</span>
-                                <small>Session Score</small>
+                                <small style="text-align: center;">Session Score</small>
                             </div>
                         </div>
                         
@@ -131,7 +131,7 @@
                             <div class="vs">VS</div>
                             <div class="session-score">
                                 <span id="session-score">0 - 0</span>
-                                <small>Session Score</small>
+                                <small style="text-align: center;">Session Score</small>
                             </div>
                         </div>
                         
